Ajout de l'utilisateur Ivana dans la BDD et correction des erreurs 403