@@ -3,13 +3,13 @@ package com.chatapp.chatapp.service;
 
 import com.chatapp.chatapp.dto.MessageRequest;
 import com.chatapp.chatapp.dto.MessageResponse;
+
+import com.chatapp.chatapp.entity.Conversation;
 import com.chatapp.chatapp.entity.Message;
 import com.chatapp.chatapp.entity.User;
-import com.chatapp.chatapp.entity.Conversation;
 
 import com.chatapp.chatapp.repository.MessageRepository;
 import com.chatapp.chatapp.repository.UserRepository;
-import com.chatapp.chatapp.repository.ConversationRepository;
 
 
 import lombok.RequiredArgsConstructor;
@@ -21,7 +21,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 
@@ -36,35 +35,29 @@ public class MessageService {
 
     private final UserRepository userRepository;
 
-    private final ConversationRepository conversationRepository;
-
-
-
+    private final ConversationService conversationService;
 
 
 
 
 
     /*
-     *
-     * CREATION MESSAGE
-     *
-     * Etat initial :
-     *
-     * ✓ envoyé
-     *
-     */
+    ==========================================
+        ENVOYER MESSAGE
+    ==========================================
+    */
+
 
     public MessageResponse sendMessage(
+
             String email,
+
             MessageRequest request
+
     ){
 
 
-
-        User sender =
-
-                userRepository.findByEmail(email)
+        User sender = userRepository.findByEmail(email)
 
                 .orElseThrow(() ->
                         new RuntimeException(
@@ -75,28 +68,21 @@ public class MessageService {
 
 
 
-
         Conversation conversation =
 
-                conversationRepository.findById(
-                        request.getConversationId()
-                )
+                conversationService.getConversationForUser(
 
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Conversation introuvable"
-                        )
+                        request.getConversationId(),
+
+                        email
+
                 );
 
 
 
 
 
-
-
-        Message message =
-
-                Message.builder()
+        Message message = Message.builder()
 
                 .content(
                         request.getContent()
@@ -120,20 +106,13 @@ public class MessageService {
 
 
 
-
-
         Message saved =
 
-                messageRepository.save(
-                        message
-                );
-
-
+                messageRepository.save(message);
 
 
 
         return convert(saved);
-
 
 
     }
@@ -144,21 +123,31 @@ public class MessageService {
 
 
 
-
-
-
-
-
-
     /*
-     *
-     * HISTORIQUE
-     *
-     */
+    ==========================================
+        HISTORIQUE MESSAGES
+    ==========================================
+    */
+
 
     public List<MessageResponse> getMessages(
+
+            String email,
+
             Long conversationId
+
     ){
+
+
+        conversationService.getConversationForUser(
+
+                conversationId,
+
+                email
+
+        );
+
+
 
 
         return messageRepository
@@ -171,7 +160,7 @@ public class MessageService {
 
                 .map(this::convert)
 
-                .collect(Collectors.toList());
+                .toList();
 
 
     }
@@ -184,19 +173,117 @@ public class MessageService {
 
 
 
+    /*
+    ==========================================
+        MARQUER TOUTE LA CONVERSATION LUE
+    ==========================================
+    */
+
+
+    public void markConversationAsRead(
+
+            Long conversationId,
+
+            String email
+
+    ){
+
+
+        conversationService.getConversationForUser(
+
+                conversationId,
+
+                email
+
+        );
+
+
+
+
+        List<Message> messages =
+
+                messageRepository.findByConversationId(
+                        conversationId
+                );
+
+
+
+
+        for(Message message : messages){
+
+
+
+            if(!message.isRead()){
+
+
+
+                message.setDelivered(true);
+
+
+                message.setRead(true);
+
+
+
+
+                if(message.getDeliveredAt()==null){
+
+
+                    message.setDeliveredAt(
+                            LocalDateTime.now()
+                    );
+
+                }
+
+
+
+
+
+                if(message.getReadAt()==null){
+
+
+                    message.setReadAt(
+                            LocalDateTime.now()
+                    );
+
+                }
+
+
+
+            }
+
+
+
+        }
+
+
+
+        messageRepository.saveAll(messages);
+
+
+
+    }
+
+
+
+
+
+
 
 
 
     /*
-     *
-     * DESTINATAIRE A RECU
-     *
-     * ✓✓ GRIS
-     *
-     */
+    ==========================================
+        MESSAGE LIVRE ✓✓ GRIS
+    ==========================================
+    */
+
 
     public MessageResponse markAsDelivered(
-            Long id
+
+            Long id,
+
+            String email
+
     ){
 
 
@@ -215,11 +302,25 @@ public class MessageService {
 
 
 
-        if(!message.isDelivered()){
+        conversationService.getConversationForUser(
+
+                message.getConversation().getId(),
+
+                email
+
+        );
 
 
-            message.setDelivered(true);
 
+
+
+        message.setDelivered(true);
+
+
+
+
+
+        if(message.getDeliveredAt()==null){
 
 
             message.setDeliveredAt(
@@ -234,18 +335,11 @@ public class MessageService {
 
 
 
+        return convert(
 
-        Message saved =
+                messageRepository.save(message)
 
-                messageRepository.save(
-                        message
-                );
-
-
-
-
-
-        return convert(saved);
+        );
 
 
     }
@@ -258,19 +352,19 @@ public class MessageService {
 
 
 
-
-
-
     /*
-     *
-     * DESTINATAIRE A LU
-     *
-     * ✓✓ BLEU
-     *
-     */
+    ==========================================
+        MESSAGE LU ✓✓ BLEU
+    ==========================================
+    */
+
 
     public MessageResponse markAsRead(
-            Long id
+
+            Long id,
+
+            String email
+
     ){
 
 
@@ -285,6 +379,17 @@ public class MessageService {
                         )
                 );
 
+
+
+
+
+        conversationService.getConversationForUser(
+
+                message.getConversation().getId(),
+
+                email
+
+        );
 
 
 
@@ -316,7 +421,6 @@ public class MessageService {
 
 
 
-
         if(message.getReadAt()==null){
 
 
@@ -333,110 +437,10 @@ public class MessageService {
 
 
 
+        return convert(
 
+                messageRepository.save(message)
 
-        Message saved =
-
-                messageRepository.save(
-                        message
-                );
-
-
-
-
-
-
-
-        return convert(saved);
-
-
-
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-    /*
-     *
-     * OUVERTURE CONVERSATION
-     *
-     * Tous les messages deviennent lus
-     *
-     */
-
-    public void markConversationAsRead(
-            Long conversationId
-    ){
-
-
-
-        List<Message> messages =
-
-                messageRepository.findByConversationId(
-                        conversationId
-                );
-
-
-
-
-
-
-
-        messages.forEach(message -> {
-
-
-
-            if(!message.isRead()){
-
-
-                message.setDelivered(true);
-
-                message.setRead(true);
-
-
-
-
-
-                if(message.getDeliveredAt()==null){
-
-
-                    message.setDeliveredAt(
-                            LocalDateTime.now()
-                    );
-
-
-                }
-
-
-
-
-
-                message.setReadAt(
-                        LocalDateTime.now()
-                );
-
-
-            }
-
-
-
-        });
-
-
-
-
-
-
-        messageRepository.saveAll(
-                messages
         );
 
 
@@ -450,17 +454,17 @@ public class MessageService {
 
 
 
-
-
-
     /*
-     *
-     * ENTITY -> DTO
-     *
-     */
+    ==========================================
+        ENTITY -> DTO
+    ==========================================
+    */
+
 
     private MessageResponse convert(
+
             Message message
+
     ){
 
 
@@ -468,7 +472,6 @@ public class MessageService {
         MessageResponse response =
 
                 new MessageResponse();
-
 
 
 
@@ -487,51 +490,66 @@ public class MessageService {
 
 
         response.setConversationId(
+
                 message.getConversation().getId()
+
         );
 
 
 
         response.setSenderId(
+
                 message.getSender().getId()
+
         );
 
 
 
         response.setSenderFirstname(
+
                 message.getSender().getFirstname()
+
         );
 
 
 
         response.setSentAt(
+
                 message.getSentAt()
+
         );
 
 
 
         response.setDelivered(
+
                 message.isDelivered()
+
         );
 
 
 
         response.setRead(
+
                 message.isRead()
+
         );
 
 
 
         response.setDeliveredAt(
+
                 message.getDeliveredAt()
+
         );
 
 
 
         response.setReadAt(
-                message.getReadAt()
-        );
 
+                message.getReadAt()
+
+        );
 
 
 
@@ -539,8 +557,8 @@ public class MessageService {
         return response;
 
 
-
     }
+
 
 
 
